# sl

./: .gitignore  CMakeLists.txt  README.md  debug.txt  math.sli  verify
examples/: big_test.ma  hello_world.asm  hello_world.c  test.ma  zfc.sl  zfc.sol
math/: main.sl  pred.sl  prop.sl  zfc.sl
res/: about.html  footer.html  index.html  index_concept.html  page.html  style.css
src/: _lex.c  arg.c  arith.c  asm-lang.c  asm-lang.h  c-lang.c  c-lang.h  common.c  common.h  core.h  input.c  interchange.c  lang.c  lang.h  lex.c  lex.h  logic.c  logic.h  mach-o.c  main.c  parse.c  parse.h  render.h  render_html.c  render_latex.c  require.c  sl.c  sl.h  sol-lang.c  sol-lang.h  validate.c  value.c
src/asm/: asm.c  asm.h  main.c
src/gm/: gm.c  gm.h
src/lib/: arg.c  arg.h  code.c  code.h  common.c  common.h  lex.c  lex.h  mach-o.h  parse.c  parse.h
src/sl/: CMakeLists.txt  logic.c  logic.h  main.c  render_html.c  sl.c  sl.h  verify
src/sol/: main.c  sol.c  sol.h
tests/: test.c  test_case.h  test_core.c  test_parse.c
